--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,20 @@
+@'
 # Java
 *.class
 *.log
 
-# Builds
+# Build outputs
 build/
 out/
 target/
 bin/
 *.jar
 
-# IDE
+# IDEs/Editors
 .idea/
 .vscode/
 *.iml
 .project
 .classpath
 .settings/
+'@ | Out-File -Encoding utf8 .\.gitignore
